content/boundary/v1.0.x/content/docs/architecture/fault-tolerance.mdx
---
layout: docs
page_title: Boundary fault tolerance recommendations
description: >-
  Understand Boundary fault tolerance recommendations to increase availability, reduce risk. Minimize the impact of node, availability zone, and regional failures.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-18T17:04:41-05:00
last_modified: 2025-11-18T17:04:41-05:00
# END AUTO GENERATED METADATA
---

# Boundary fault tolerance recommendations

Boundary's fault tolerance relies on redundant controllers and workers behind a load balancer: the control plane can survive outages in up to two of three availability zones, and worker sessions fail over automatically when a worker node goes down. This page covers node, availability zone, and regional failure handling. It does not cover application-level retry logic or client-side failover.

## What happens during a node failure?

Boundary controllers store all state and configuration within a PostgreSQL database that must not be deployed on the controller nodes.
When a controller node fails, users are still able to interact with other Boundary controllers, assuming the presence of additional nodes behind a load balancer.

Boundary workers are used as either proxies or reverse proxies.
Boundary workers routinely communicate with Boundary controllers to report their health.
In the event of a Boundary worker node failure, it is a best practice to have at least three Boundary workers per network boundary, per type (ingress and egress).
Therefore, the controller assigns a user's proxy session to an active Boundary worker node.

## Availability zone failure

By deploying Boundary controllers in the [recommended architecture](/boundary/docs/architecture/recommended-architecture) across three availability zones with load balancing in front of them, the Boundary control plane can survive outages in up to two availability zones. For more on how controllers and workers stay available during a node or AZ outage, refer to [high availability installation](/boundary/docs/architecture/high-availability).

The best practice for deploying Boundary workers is to have at least one worker deployed per availability zone.
In the case of an availability zone outage, if the networking service is still up, users will have their attempted session connection proxied through a worker in a different availability zone and then onto the target, granted the proper security rules are in place to allow for cross subnet/availability zone communication.

## Regional failures

Generally speaking, when there is a failure in an entire cloud region, the resources running in that region are most likely inaccessible, especially if the networking service is affected.

To continue to serve Boundary controller requests in the event of a regional outage, there must be a deployment like the one outlined in this guide in a different region.
The nodes in the secondary region must be able to communicate with the PostgreSQL database, which can be accomplished with multi-regional database technologies from the various cloud providers (for example AWS RDS (Relational Database Service) Read Replicas, where a read replica can be promoted to a primary in the event the primary resides in a failed region).

Another point of consideration is how to handle load balancing Boundary controller requests to regions that are not in a failed state.
Services like [AWS Global Accelerator](https://aws.amazon.com/global-accelerator/) for AWS, [Cross-Region Load Balancer](https://learn.microsoft.com/en-us/azure/load-balancer/cross-region-overview) for Azure, and [GCP Cloud Load Balancer](https://cloud.google.com/load-balancing/docs/load-balancing-overview) for GCP all provide this level of functionality with some configuration.

Refer to your cloud provider's documentation for additional information regarding multi-region disaster recovery strategies for PostgreSQL.

In the case of a regional outage, if a Boundary worker cannot reach its upstream worker, cannot reach a controller, a user cannot reach the worker, or any combination of the above, the user is not able to establish a proxied session to the target.

## Failure scenario comparison

| Failure type | Scope | What survives | Required mitigation |
|---|---|---|---|
| Node failure | Single controller or worker node | Other controllers/workers behind the load balancer continue serving traffic | Deploy multiple controllers and at least three workers per network boundary, per type |
| Availability zone failure | All nodes in one availability zone | Control plane, if deployed across three availability zones; sessions proxy through a worker in another AZ | Deploy controllers and workers across at least three availability zones |
| Regional failure | All resources in a cloud region | Boundary control plane, only if a secondary-region deployment with database replication exists | Deploy a secondary region with PostgreSQL replication and cross-region load balancing |

## FAQ

### What happens to in-flight sessions during a worker failure?

When a Boundary worker node fails, the controller assigns new proxy session requests to another active worker node. This is why it's a best practice to deploy at least three Boundary workers per network boundary, per type (ingress and egress).
